k3s/apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: automation
  labels:
    app: home-assistant
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: ha-config
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: dbus
              mountPath: /run/dbus
              readOnly: true
          resources:
            requests:
              memory: 320Mi
            limits:
              memory: 768Mi
          securityContext:
            privileged: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: ha-config
          configMap:
            name: home-assistant-config
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
