k3s/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: automation
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: web
      port: 8123
      targetPort: 8123
      protocol: TCP
